syntax = "proto3";

option go_package = "/portfolio";

service Portfolio {
    rpc GetPerformance(GetPerformanceRequest) returns (stream GetPerformanceResponse) {}
}

message GetPerformanceRequest {
    int64 cash = 1;
    repeated Position positions = 2;
}

message Position {
    string symbol = 1;
    int64 quantity = 2;
}

message GetPerformanceResponse {
    int64 nav = 1;
    double pnl = 2;
}